Implemented report generation